added explanation of patch cords

--- a/index.html
+++ b/index.html
@@ -9,6 +9,31 @@
 <body>
     <h1>FAQ</h1>
     <details>
+        <summary>How does the color coding of patch cords work?</summary><p>The patch cords are colored to give an indication of the type of information that is carried in them, which can speed up debugging or understanding the logic of the patch.
+        </p>
+        <p>The cords are coded as follows:</p>
+        <table>
+            <tr>
+                <td>black</td>
+                <td>sends a bang to execute collected data</td></tr>
+        <tr>
+                <td>red</td>
+                <td>pitch information</td></tr>
+        <tr>
+                <td>magenta/pink</td>
+                <td>rhythmic information</td></tr>
+                <td>cyan/green-blue</td>
+                <td>ASCII code</td></tr>
+                <td>grey</td>
+                <td>extras attached to notes such as articulation, lyrics</td></tr>
+                <td>blue</td>
+                <td>messages that clear/empty/reset objects (e.g. zlclear, set, clear)</td></tr>
+
+            
+        </table>
+
+    </details>
+    <details>
         <summary>How do I add videos?</summary>
         <ol>
             <li>In advance, prepare a folder of your video files. I recommend making them all the same file format and editing the filenames of the movies so they are short and easy to remember and type.</li>
