added installation links

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <h1>ChatMusic User Manual</h1>
+    <h2>Download links</h2>
+    <ul>Install the latest version from here: <a href="https://www.dropbox.com/scl/fo/1voqlqjcp0dnb27z7lyfl/AC0PfGvi8VoCDFWkJ73Nmqg?rlkey=074bznwgh7yna7me9128ol6yg&dl=0">DROPBOX LINK</a></ul>
+    <ul>You need the highest numbered version of the ChatMusic folder, and you also need the externals folder</ul>
+    <ul>Both of these folders must be visible inside the Max file preferences paths. Instructions below</ul>
+    <h2>Other required software</h2>
+    <ul><a href="https://cycling74.com/downloads">Max</a></ul>
+    <ul><a href="https://www.bachproject.net/">Bach</a></ul>
     <h1>Installation Instructions</h1>
     <ul>Install Max MSP from cycling74.com</ul>
     <ul>The current version of the patch was created on Max 8.2 running on MacOS Ventura (13.0)</ul>
