--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 </head>
 <body>
     <h1>ChatMusic User Manual</h1>
-    <h2>Download links</h2>
+    <h2>Installation Instructions</h2>
+    <h3>Download links</h3>
     <ul>Install the latest version from here: <a href="https://www.dropbox.com/scl/fo/1voqlqjcp0dnb27z7lyfl/AC0PfGvi8VoCDFWkJ73Nmqg?rlkey=074bznwgh7yna7me9128ol6yg&dl=0">DROPBOX LINK</a></ul>
     <ul>You need the highest numbered version of the ChatMusic folder, and you also need the externals folder</ul>
     <ul>Both of these folders must be visible inside the Max file preferences paths. Instructions below</ul>
-    <h2>Other required software</h2>
+    <h3>Other required software</h3>
     <ul><a href="https://cycling74.com/downloads">Max</a></ul>
     <ul><a href="https://www.bachproject.net/">Bach</a></ul>
-    <h1>Installation Instructions</h1>
+    <h3>Instructions</h3>
     <ul>Install Max MSP from cycling74.com</ul>
     <ul>The current version of the patch was created on Max 8.2 running on MacOS Ventura (13.0)</ul>
     <ul>The patch will most likely work on other systems</ul>
@@ -25,16 +26,16 @@
     <ul>In the menu that appears, navigate to the ChatMusic folder you already created, and press Open.</ul>
     <ul>Ensure that the "include subfolders" box is checked.</ul>
     <ul>Now close Max 8.</ul>
-    <ul>Copy the latest version of ChatMusic (which should have a name like ChatMusic_0.2), and the latest version of the externals folder, into the ChatMusic folder.</ul>
+    <ul>Copy the latest version of ChatMusic (which should have a name like ChatMusic_0.2), and the latest version of the externals folder (if new externals have been added), into the ChatMusic folder.</ul>
     <ul>If there is an existing version of ChatMusic, you should move it out of the ChatMusic folder if you wish to keep a copy.</ul><ul>Launch the program by opening "ChatMusic.maxpat" inside the latest version folder. Ensure it opens in Max 8, and not any other version of Max (or a standalone software made in Max which may already be installed on your computer, by rightclicking the file and clicking "Open with", then choosing Max 8)</ul>
-    <h1>Setting up the patch</h1>
+    <h2>Setting up the patch</h2>
     <ul>You should always start by pressing the init button</ul>
     <ul>if something goes wrong and you need to reset settings, you should first try pressing "lb" and then if that doesn't fix things, try "init" again. If this doesn't work, ensure any custom settings are saved, close the patch, re-open, and make sure to press "init"</ul>
 
 
 
 
-    <h1>FAQ</h1>
+    <h2>FAQ</h2>
     <details>
         <summary>How does the color coding of patch cords work?</summary><p>The patch cords are colored to give an indication of the type of information that is carried in them, which can speed up debugging or understanding the logic of the patch.
         </p>
@@ -96,13 +97,13 @@
         <summary>Title</summary>
         <p>Text</p>
     </details> -->
-<h1>PATCH MAP</h1>
-<h2>Techniques</h2><p>Located inside score.innards; takes in a phrase of ASCII to trigger a technique. Normally the chosen value is decided by a math operation on the input phrase.</p>
+<h2>PATCH MAP</h2>
+<h3>Techniques</h3><p>Located inside score.innards; takes in a phrase of ASCII to trigger a technique. Normally the chosen value is decided by a math operation on the input phrase.</p>
 
-    <h1>CHAT COMMANDS</h1>
-    <h2>VIDEO</h2>
+    <h2>CHAT COMMANDS</h2>
+    <h3>VIDEO</h3>
     <p>Video is a special case right now where there is complex subrouting... I need to understand better myself before I can document it. </p>
-    <h1>MAX COMMANDS</h1>
+    <h2>MAX COMMANDS</h2>
     <h2>GENERAL</h2>
     <details>
         <summary>open</summary>
